norm cleaned, opacity removed on ko unit to prevent selection issues, z-index on dmg calc added

--- a/assets/styles/scss/_calculator.scss
+++ b/assets/styles/scss/_calculator.scss
@@ -10,6 +10,7 @@
     // background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    z-index: 7;
 }
 
 .display {
