--- a/assets/styles/scss/_components.scss
+++ b/assets/styles/scss/_components.scss
@@ -48,10 +48,8 @@
 
 .KO {
     text-decoration: line-through;
-    // color: red;
-    //background-color: gris foncé
     background-color: #7F3300;
-    opacity: 0.5;
+    // opacity: 0.5;
     box-shadow: 0 0 0.2em 0.2em black;
 }
 
